fix for gap between tiled images and their border (and backing color matches outline as an aliasing precaution)

--- a/css/modal-styles.css
+++ b/css/modal-styles.css
@@ -182,10 +182,6 @@
 	border-color: inherit;
 }
 
-.no-text {
-	font-size: 0;
-}
-
 @keyframes fade {
 	0% {
 		opacity: 0;
